# format_serde_error

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  config.json
.github/workflows/: rust.yml
examples/: custom.rs  custom_tabs.rs  serde_json.rs  serde_json_long.rs  serde_yaml.rs  serde_yaml_long.rs  toml.rs
resources/: config.json  config.toml  config.yaml  config_pretty.json  generate_example_pngs
resources/example_output/: .gitattributes
src/: control.rs  lib.rs  main.rs  serde_error.rs
src/test/: config.rs  mod.rs
