[package]
name = "format_serde_error"
version = "0.1.0"

authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
description = "Serde error messages for humans."
documentation = "https://docs.rs/format_serde_error/"
homepage = "https://github.com/AlexanderThaller/format_serde_error"
keywords = ["serde", "error", "formatting"]
categories = ["command-line-interface", "value-formatting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/format_serde_error"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0.7"
