[package]
name = "format_serde_error"
version = "0.3.0"

authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
description = "Serde error messages for humans."
documentation = "https://docs.rs/format_serde_error/"
homepage = "https://github.com/AlexanderThaller/format_serde_error"
keywords = ["serde", "error", "formatting"]
categories = ["command-line-interface", "value-formatting"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/format_serde_error"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde_yaml", "serde_json", "colored", "graphemes_support", "toml"]
graphemes_support = ["unicode-segmentation"]

[dependencies]
colored = { version = "2", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
unicode-segmentation = { version = "1", optional = true }
toml = { version = "0.5", optional = true }

[dev-dependencies]
anyhow = "1"
pretty_assertions = "0.7"

[[example]]
name = "serde_yaml"
required-features = ["serde_yaml"]

[[example]]
name = "serde_yaml_long"
required-features = ["serde_yaml"]

[[example]]
name = "serde_json"
required-features = ["serde_json"]

[[example]]
name = "serde_json_long"
required-features = ["serde_json"]

[[example]]
name = "toml"
required-features = ["toml"]
